Use mp3 instead of wav, clear files after errors

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "music-metadata": "^8.3.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.1"
